# claw-collective

./: LICENSE  README.md  pyproject.toml  rebrand.md  setup.py
claws/: __init__.py  a2a.py  board.py  cli.py  config.py  dashboard.py  golden_loop.py  inbox.py  init.py  lifecycle.py  locking.py  plan.py  register.py  secrets.py  spawn.py  sync.py  task.py  team.py  template.py  workspace_mgr.py
docs/: AGENT_SELF_SETUP.md  COMMAND_REFERENCE.md  GETTING_STARTED.md  HUMAN_SETUP.md  TELEGRAM_ORCHESTRATION.md  TELEGRAM_SETUP.md  THREE_AGENT_SETUP.md  TUI_SETUP.md  WORKFLOW_EXAMPLES.md
scripts/: bootstrap.sh
