[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "claws"
version = "0.1.0"
description = "Claw Collective: Seamless Multi-Machine Agent Coordination for OpenClaw"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Claw Collective", email = "info@openclaw.io" }
]
keywords = ["openclaw", "agents", "coordination", "cli", "automation", "collective"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "pydantic>=2.0",
    "aiohttp>=3.9",
    "jinja2>=3.1",
    "aiohttp-jinja2>=1.6",
    "tomli>=2.0; python_version < '3.11'",
]

[project.scripts]
claws = "claws.cli:main"

[project.urls]
Homepage = "https://github.com/openclaw/claws"
Documentation = "https://github.com/openclaw/claws/docs"

[tool.setuptools.packages.find]
where = ["."]
include = ["claws*"]
